2009-11-24  Michael Albinus  <michael.albinus@gmx.de>

	Improve handling of processes on remote hosts.

	* eshell/esh-util.el (eshell-path-env): New defvar.
	(eshell-parse-colon-path): New defun.
	(eshell-file-attributes): Use `eshell-parse-colon-path'.

	* eshell/esh-ext.el (eshell-search-path): Use
	`eshell-parse-colon-path'.
	(eshell-remote-command): Remove argument HANDLER.
	(eshell-external-command): Check for FTP remote connection.

	* eshell/esh-proc.el (eshell-gather-process-output): Use
	`file-truename', in order to start also symlinked files. Apply
	`start-file-process' instead of `start-process'. Shorten `command'
	to the local file name part.

	* eshell/em-cmpl.el (eshell-complete-commands-list): Use
	`eshell-parse-colon-path'.

	* eshell/em-unix.el (eshell/du): Check for FTP remote connection.

	* net/tramp.el (tramp-eshell-directory-change): New defun.  Add it
	to `eshell-directory-change-hook'.

2009-11-24  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-mode): Switch off view-mode explicitly,
	because it could be enabled automatically if view-read-only is
	non-nil.

2009-11-24  Michael Kifer  <kifer@cs.stonybrook.edu>

	* ediff-vers.el (ediff-rcs-get-output-buffer): Revert the change
	made on 2009-11-22.

2009-11-24  Glenn Morris  <rgm@gnu.org>

	* bookmark.el (bookmark-bmenu-hide-filenames): Remove assignment to
	deleted variable bookmark-bmenu-bookmark-column.

	* cedet/semantic/idle.el (global-semantic-idle-scheduler-mode):
	Move after definition of global-semantic-idle-tag-highlight-mode.

2009-11-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* bookmark.el (bookmark-bmenu-search): Clear echo area when exiting.

2009-11-23  Ken Brown  <kbrown@cornell.edu>  (tiny change)

	* net/browse-url.el (browse-url-filename-alist): On Windows, add
	two slashes to the "file:" prefix.
	(browse-url-file-url): De-munge Cygwin filenames before passing
	them to Windows browser.
	(browse-url-default-windows-browser): Use call-process.
